[package]
name = "webtransport_quiche"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# quiche = "0.16.0"
quiche = {git = "https://github.com/francoismichel/quiche", rev = "330b24e2f01ac4e16313154f753a9228cd9e1061"}
octets = "0.2.0"
log = "0.4.17"
mio = { version = "0.8", features = ["net", "os-poll"] }
ring = "0.16"
url = "1"
env_logger = "0.9.3"
rand = "0.8.5"
regex = "1.7.0"
docopt = "1"

[lib]
name = "webtransport_quiche"
path = "src/lib.rs"

[[bin]]
name = "interop_server"
path = "interop/interop_server.rs"

[workspace]
members = [ "dummy_webtransport" ]