[package]
name = "async_webtransport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# quiche = "0.16.0"
quiche = {git = "https://github.com/francoismichel/quiche"}
webtransport_quiche = {path = "../"}
octets = "0.2.0"
log = "0.4.17"
mio = { version = "0.8", features = ["net", "os-poll"] }
tokio = { version = "1", features = ["full"] }
ring = "0.16"
url = "1"
env_logger = "0.9.3"
rand = "0.8.5"
regex = "1.7.0"
docopt = "1"
thiserror = "1"

[lib]
name = "dummy_webtransport_handler"
path = "lib.rs"

# [[bin]]
# name = "dummy_client"
# path = "client.rs"

# [[bin]]
# name = "dummy_server"
# path = "server.rs"
